<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<item
		android:id="@+id/navigation_menu_common_passenger"
		android:icon="@drawable/icon_sliding_passenger"
		android:title="@string/navigation_menu_common_passenger" />
	<item
		android:id="@+id/navigation_menu_my_order"
		android:icon="@drawable/icon_sliding_order"
		android:title="@string/navigation_menu_my_order" />
	<item
		android:id="@+id/navigation_menu_my_ticket"
		android:icon="@drawable/icon_sliding_ticket"
		android:title="@string/navigation_menu_my_ticket" />
	<item
		android:id="@+id/navigation_menu_about_us"
		android:icon="@drawable/icon_sliding_about_us"
		android:title="@string/navigation_menu_about_us" />
	<item
		android:id="@+id/navigation_menu_upgrade"
		android:icon="@drawable/icon_sliding_upgrade"
		android:title="@string/navigation_menu_upgrade" />
	<item
		android:id="@+id/navigation_menu_settiing"
		android:icon="@drawable/icon_sliding_setting"
		android:title="@string/navigation_menu_setting" />

</menu>